--- a/TravelGoods/WebContent/suitcaseShop/etc/color.jspf
+++ b/TravelGoods/WebContent/suitcaseShop/etc/color.jspf
@@ -1,7 +1,7 @@
 <% 
-  String bodyback_c="#e0ffff";
+  String bodyback_c="#EDA900";
   String back_c="#8fbc8f";
   String title_c="#5f9ea0";
-  String value_c="#b0e0e6";
-  String bar="#778899";
+  String value_c="#EDA900";
+  String bar="#E8CEC2";
 %>
